@@ -7,6 +7,7 @@ New features, changes and fixes since gnuplot version 4.6.1
 * FIX gd terminal fontsize change requested by set_font(",newsize")
 * FIX -persist mode continued mousing of 3D "set view map" plots
 * FIX reset parsing state after error in parsing string input
+* FIX qt terminal mouse tracking and resize events for persistent plots
 
 
 New features, changes and fixes in gnuplot version 4.6.1
